force-app/main/default/objects/Phase_Color__c/Phase_Color__c.object-meta.xml
<CustomObject>
    <description>Custom phase colors for capability maps</description>
    <label>Phase Color</label>
    <nameField>
        <label>Phase Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phase Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>