force-app/main/default/objects/Phase_Color__c/fields/Capability_Map__c.field-meta.xml
<CustomField>
    <fullName>Capability_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Capability Map</label>
    <referenceTo>Capability_Map__c</referenceTo>
    <relationshipLabel>Phase Colors</relationshipLabel>
    <relationshipName>Phase_Colors</relationshipName>
    <type>Lookup</type>
</CustomField>