force-app/main/default/objects/Phase_Color__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Hex color code (e.g., #0176D3)</description>
    <label>Color</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>